# tensegrity

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  python-test.yml
doc/: conf.py  index.rst  requirements.txt
doc/tables/: tab1.csv  tab4.csv  tab5.csv  tab6.csv
doc/usage/: examples.rst  installation.rst  modules.rst  properties.rst  quickstart.rst  structure.rst  tab1.csv  tab2.csv  tab3.csv  transformations.rst
examples/: basic.ipynb  examples.ipynb  operations.ipynb  properties.ipynb  quick_start.ipynb  snelson.py  structures.ipynb  transformations.ipynb  working_with_structures.ipynb
src/tnsgrt/: michell.py  optim.py  prism.py  stiffness.py  structure.py  utils.py
src/tnsgrt/plotter/: matplotlib.py  plotter.py  vispy.py
tensegrity/: michell.py  optim.py  plotter.py  plotter_vispy.py  prism.py  snelson.py  stiffness.py  structure.py  utils.py
tensegrity/plotter/: __init__.py  matplotlib.py  plotter.py  vispy.py
tests/: testSnelson.py  testStructure.py  testUtils.py  test_equilibrium.py  test_michell.py  test_prism.py  test_snelson.py  test_stiffness.py  test_structure.py  test_utils.py
tnsgrt/: michell.py  prism.py  stiffness.py  structure.py  utils.py
tnsgrt/plotter/: vispy.py
